[package]
name = "f2n"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
structopt = { version = "0.3", default-features = false }
async-nats = { version = "0.9.18"}
futures = "0.3.15"
